# nrf54l15-connectkit

./: 404.html  README.md  VERSION  index.html  mkdocs.yml  sitemap.xml  west.yml
.github/workflows/: documentation.yml  twister-apps-samples.yml
LICENSE/: index.html
applications/ifmcu_firmware/: prj.conf  sample.yaml
applications/ifmcu_firmware/udev/: 50.zephyr-dap.rules  readme.md
applications/quick_start_demo/: CMakeLists.txt  Kconfig  Kconfig.sysbuild  prj.conf  sample.yaml
applications/quick_start_demo/src/: main.c
blog/: index.html
blog/introducing-interface-mcu/: index.html
blog/introducing-nrf-connect-sdk/: index.html
blog/nrf54l15-connect-kit-now-available/: index.html
contributing/: index.html
contributing/creating-a-pull-request/: index.html
contributing/reporting-a-bug/: index.html
docs/: getting-started.md  hardware.md  index.md  introduction.md  purchase.md  resources.md  revision-history.md  troubleshooting.md
docs/contributing/: creating-a-pull-request.md  index.md  reporting-a-bug.md
getting-started/: index.html
guides/ncs/: index.html
guides/programming/: index.html
hardware/: index.html
introduction/: index.html
purchase/: index.html
resources/: index.html
revision-history/: index.html
samples/adc/: sample.yaml
samples/blinky/: sample.yaml
samples/button/: sample.yaml
samples/hello_world/: sample.yaml
samples/input_dump/: sample.yaml
samples/shell/: sample.yaml
samples/system_off/: sample.yaml
scripts/: requirements-docs.txt
search/: search_index.json
troubleshooting/: index.html
(+157 files in other folders)
